[package]
name = "core-risk-management"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Risk management and insurance framework for StableRWA platform"
license = "MIT"
repository = "https://github.com/arkSong/rwa-platform"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for external API calls
reqwest = { version = "0.11", features = ["json"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Database (optional, for persistent storage)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Decimal arithmetic for financial calculations
rust_decimal = { workspace = true }

# Statistical calculations
statrs = "0.16"

# Machine learning for risk modeling (optional)
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }

# Time series analysis
polars = { version = "0.35", features = ["lazy", "temporal"], optional = true }

# Internal dependencies
core-utils = { path = "../core-utils" }
core-security = { path = "../core-security" }
core-compliance = { path = "../core-compliance" }
core-asset-lifecycle = { path = "../core-asset-lifecycle" }

[dev-dependencies]
tokio-test = "0.4"
fake = "2.10"
mockall = "0.11"
approx = "0.5"

[features]
default = []
database = ["sqlx"]
ml-models = ["candle-core", "candle-nn"]
time-series = ["polars"]
