[package]
name = "core-wallet"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Multi-signature wallet and key management for StableRWA platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arkSong/rwa-platform"
keywords = ["wallet", "multisig", "keys", "hardware", "security"]
categories = ["finance", "cryptography"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Decimal arithmetic
rust_decimal = { version = "1.33", features = ["serde-float"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Ethereum integration
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Cryptography
ring = "0.17"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Key derivation
bip32 = "0.5"
bip39 = "2.0"
coins-bip32 = "0.8"
coins-bip39 = "0.8"

# Secp256k1
secp256k1 = { version = "0.28", features = ["recovery", "rand-std"] }

# Ed25519
ed25519-dalek = "2.0"

# AES encryption
aes-gcm = "0.10"

# Configuration
config = "0.14"

# Metrics
prometheus = "0.13"

# Rate limiting
governor = "0.6"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Base58 encoding
bs58 = "0.5"

# QR code generation
qrcode = "0.14"

# Hardware wallet support
ledger-transport = { version = "0.10", optional = true }
trezor-client = { version = "0.1", optional = true }

# Internal dependencies
core-utils = { path = "../core-utils" }
core-security = { path = "../core-security" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"

[features]
default = ["multisig", "hardware", "recovery"]
multisig = []
hardware = ["ledger-transport", "trezor-client"]
recovery = []
social-recovery = []
timelock = []
gnosis-safe = []
