[package]
name = "nft-minting"
version = "0.1.0"
edition = "2021"
authors = ["arkSong <arksong2018@gmail.com>"]
description = "Enterprise-grade NFT minting microservice for StableRWA platform."
license = "MIT OR Apache-2.0"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
ethers = { version = "2.0", features = ["abigen", "contract", "providers", "signers"] }
dotenv = "0.15"
thiserror = "1.0" 